k8s/pod_mongo_express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
spec:
  selector:
    matchLabels:
      component: mongoexpress
  replicas: 1
  template:
    metadata:
      labels:
        component: mongoexpress
    spec:
      containers:
        - name: mongoexpress
          image: mongo-express
          ports:
            - containerPort: 8081
