k8s/pod_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  selector:
    matchLabels:
      component: web
  replicas: 2
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: consoko/crawling_web
          ports:
            - containerPort: 8000
