k8s/pod_mongo_express_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-clusterip
spec:
  type: ClusterIP
  selector:
    component: mongoexpress
  ports:
    - port: 8081
      targetPort: 8081
