k8s/pod_mongo_express_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-nodeport
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30000
  selector:
    component: mongoexpress
