k8s/pod_mongodb_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-clusterip
spec:
  type: ClusterIP
  selector:
    component: mongodb
  ports:
    - port: 27017
      targetPort: 27017
