k8s/pod_web_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-clusterip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8000
      targetPort: 8000
