k8s/pod_web_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30030
  selector:
    component: web
