k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mongo-express.test.com
    http:
      paths:
      - backend:
          serviceName: mongoexpress-clusterip
          servicePort: 8081
  - http:
      paths:
      - backend:
          serviceName: web-clusterip
          servicePort: 8000
    # - http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: web-clusterip
    #           servicePort: 80
    #       - path: /mongo-express/
    #         backend:
    #           serviceName: mongoexpress-clusterip
    #           servicePort: 8081
    #       - path: /public/
    #         backend:
    #           serviceName: mongoexpress-clusterip
    #           servicePort: 8081
